2020-05-29 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	split extractQueryRecord from extractQueryRecords and start extracting all sub-objects into DBSObjects, not just the top-level.

2020-05-23 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.m
	Try to extract arrays which have a single element.

2020-05-22 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Unpack nested queries and extract list of SObjects.

2020-05-22 Riccardo Mottola <rm@gnu.org>

	* DBFileWriter.h
	* DBFileWriter.m
	new formatSObject: method for formatting specific SObject complex object.

2020-02-12 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Initialize correctly dbSoap object with batch size.

2019-11-24 Riccardo Mottola <rm@gnu.org>

	* DBSoap+Creating.m
	* DBSoap+Updating.m
	* DBSoap.h
	* DBSoap.m
	Provide means for applying assignment ruleson insert/update (currently
	defaulted to yes)

2019-06-26 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Do not use autorelease

2019-06-19 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
        Fix autorelease issues inside the loop with Query Locator.

        * DBSoap+Selecting.m
        Clean up memory management of GWSService a little.

2019-06-18 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
        Correctly initialize create and update services.

2019-06-04 Riccardo Mottola <rm@gnu.org>

	* DBSoap+Updating.m
	* DBSoap+Selecting.m
	* DBSoapCSV.m
	* DBSoap+Deleting.m
	* DBSoap+Creating.m
	* DBSoap.h
	* DBSoap.m
	Instantiate GWSService each time it is needed, do not keep it persistent as an ivar.

2019-06-02 Riccardo Mottola <rm@gnu.org>

	* DBRest.h
	* DBRest.m
	* DBSoap.h
	* DBSoap.m
	* DBSoapCSV.m
	Store serviceURL as NSURL and not as a string anymore.

2019-06-02 Riccardo Mottola <rm@gnu.org>

	* DBRest.h
	* DBRest.m
	First steps in REST API query support.

2019-05-28 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Remove unused set.

2018-07-23  Riccardo Mottola <rm@gnu.org>

	* DBSoap+Deleting.m
	Fix cycle exit condition!

	* DBSoap+Updating.m